# pysensorlinx

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: live_tests.yml  offline_tests.yml  publish_to_pypi.yml  release.yml  run_tests.yml  unit_tests.yml
examples/: system_state.py
src/pyomnisense/: __init__.py  omnisense.py
src/pysensorlinx/: __init__.py  sensorlinx.py
tests/: auth_test.py  device_dispatch_test.py  get_parameter_test.py  get_parameter_tests.py  live_test.py  login_test.py  sensor_data_test.py  sensor_select_test.py  set_parameters_test.py  set_parameters_tests.py  settings_test.py  site_select_test.py  temperature_class_test.py  temperature_class_tests.py  thm_zon_setters_test.py
tests/fixtures/: device_thm_0600.json  device_zon_0600.json
tests/samples/: sensor_123456.html  sensor_654321.html  site_list.html
